fix light/dark mode for photography page (when starting in dark mode)

--- a/src/css/photography.scss
+++ b/src/css/photography.scss
@@ -3,11 +3,8 @@
 .Photography {
   padding: 2rem 1.5rem;
   min-height: 100vh;
-
-  &.dark-mode {
-    background-color: $sophie-black;
-    color: white;
-  }
+  background-color: var(--background-rgb);
+  color: var(--foreground-rgb);
 
   .gallery-header {
     text-align: center;
